--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-RED_LIGHT_MODULE/SERVICENOW/traffic_dataset
+traffic_dataset
+yolov7/best_mine.pt
+yolov7/best_mine5.pt
+yolov7/best.pt
+yolov7/epoch_000.pt
+yolov7/epoch_099.pt
+yolov7/last.pt
+yolov7/yolov7_training.pt
+yolov7/yolov7-tiny.pt
+
+
